# csaopt-tidings

./: CMakeLists.txt  README.md
CMakeModules/: FindCapnProto.cmake
src/: plumbing.capnp  tiding.capnp  tidings.capnp
